# This file represents a "dummy" package that expresses
# the dependencies necessary to run the various python-based
# test suites in the qemu.git tree.
[metadata]
name = qemu.dummy_tests
version = 0.0.0
description = qemu.git testing dummy package

[options]
packages =
python_requires = >= 3.6
install_requires =
    qemu  # Note: A special setup script will always install 'qemu' from
          # qemu.git/python. It doesn't have a meaningful/real version.

[options.extras_require]
# Extra dependencies required by the avocado tests.
avocado =
    avocado-framework<89.0,>=88.1
    pycdlib<2.0,>=1.11.0
